# stellation

crates/stellation-backend/: Cargo.toml
crates/stellation-backend-cli/: Cargo.toml
crates/stellation-backend-tower/: Cargo.toml
crates/stellation-backend-warp/: Cargo.toml
crates/stellation-backend-warp/src/: endpoint.rs  filters.rs  request.rs
crates/stellation-backend/src/: root.rs
crates/stellation-bridge/: Cargo.toml
crates/stellation-bridge/src/hooks/: use_bridged_mutation.rs  use_bridged_query.rs  use_bridged_query_value.rs
crates/stellation-frontend/: Cargo.toml
crates/stellation-frontend/src/: root.rs
crates/stellation-frontend/src/components/: client_only.rs
crates/stellation-stylist/: Cargo.toml
crates/stellation-stylist/src/: backend.rs  frontend.rs
examples/fullstack/api/: Cargo.toml
examples/fullstack/client/: Cargo.toml
examples/fullstack/view/: Cargo.toml
examples/fullstack/view/src/pages/: greeting.rs  server_time.rs
