[package]
name = "stellation-backend"
version = "0.3.0"
edition = "2021"
rust-version = "1.66"
repository = "https://github.com/futursolo/stellation"
authors = ["Kaede Hoshiakwa <futursolo@icloud.com>"]
description = "The framework experience for Yew."
keywords = ["web", "wasm", "yew", "framework", "ssr"]
categories = ["wasm", "web-programming"]
readme = "../../README.md"
homepage = "https://github.com/futursolo/stellation"
license = "MIT OR Apache-2.0"

[dependencies]
futures = { version = "0.3", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
thread_local = "1.1.7"
lol_html = "1.1.1"
serde_urlencoded = "0.7.1"
anymap2 = "0.13.0"
http = "1.1.0"

# Stellation Components
stellation-bridge = { version = "0.3.0", path = "../stellation-bridge" }
stellation-core = { version = "0.3.0", path = "../stellation-core" }

# Yew / Component Related
yew = { version = "0.21.0", features = ["ssr"] }
bounce = { version = "0.9.0", features = ["helmet", "ssr"] }
yew-router = "0.18.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "documenting"]
